responsive done on home page, about page, social-business page, services

--- a/styles/base/base-style.css
+++ b/styles/base/base-style.css
@@ -135,6 +135,12 @@ html {
   }
 }
 
+@media (max-width: 60em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
