--- a/styles/base/base-style.scss
+++ b/styles/base/base-style.scss
@@ -16,6 +16,9 @@ html{
     @include response(phone){
         font-size: 50%;
     }
+    @include response(tab-port){
+        font-size: 50%;
+    }
 }
 
 body{
