--- a/styles/pages/services/services.scss
+++ b/styles/pages/services/services.scss
@@ -1,6 +1,7 @@
 @import "../../base/base-style.scss";
 
 @import "../../components/header";
+@import "../../components/footer";
 
 @import "./inspire-slider";
 @import "./service-highlight";
