--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -92,6 +92,52 @@
     .header-section{
         z-index: 1000;
         nav{
+            height: 8rem;
+
+                // @include response(phone){
+                //     height: 6rem;
+                // }
+
+            .nav-links{
+                position: absolute;
+                right: 0;
+                height: 90vh;
+                top: 80px;
+                background-color: $text-dark;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                transform: translateY(calc(-100% - 80px));
+                transition: transform 0.3s ease-in;
+                z-index: 2;
+                li{
+                    opacity: 0;
+                    padding: 5% 0;
+                    a{
+                        color: $text-light;
+                    }
+                }
+            }   
+            .logo {
+                img {
+                    height: 40%;
+                }
+            } 
+            .nav-active{
+                transform: translateY(0%);
+            }                     
+            .burger {
+                display: block;
+            }
+        }
+    }
+}
+
+@include response (tab-port){
+    .header-section{
+        z-index: 1000;
+        nav{
             height: 80px;
             .nav-links{
                 position: absolute;
