--- a/styles/pages/about/about.css
+++ b/styles/pages/about/about.css
@@ -37,6 +37,7 @@ $breakpoint arguments choice:
 */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-weight: 700;
@@ -132,6 +133,12 @@ html {
 }
 
 @media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 60em) {
   html {
     font-size: 50%;
   }
@@ -274,6 +281,12 @@ html {
 }
 
 @media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 60em) {
   html {
     font-size: 50%;
   }
@@ -290,6 +303,14 @@ body {
   padding: 1rem 2rem;
   border-radius: .5rem;
   cursor: pointer;
+}
+
+@media (max-width: 35.5em) {
+  .btn {
+    font-size: 1.6rem;
+    padding: .8rem 1.6rem;
+    border-radius: .5rem;
+  }
 }
 
 .btn-primary {
@@ -481,6 +502,12 @@ html {
 }
 
 @media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 60em) {
   html {
     font-size: 50%;
   }
@@ -727,6 +754,57 @@ p {
     z-index: 1000;
   }
   .header-section nav {
+    height: 8rem;
+  }
+  .header-section nav .nav-links {
+    position: absolute;
+    right: 0;
+    height: 90vh;
+    top: 80px;
+    background-color: #222222;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    -webkit-transform: translateY(calc(-100% - 80px));
+            transform: translateY(calc(-100% - 80px));
+    -webkit-transition: -webkit-transform 0.3s ease-in;
+    transition: -webkit-transform 0.3s ease-in;
+    transition: transform 0.3s ease-in;
+    transition: transform 0.3s ease-in, -webkit-transform 0.3s ease-in;
+    z-index: 2;
+  }
+  .header-section nav .nav-links li {
+    opacity: 0;
+    padding: 5% 0;
+  }
+  .header-section nav .nav-links li a {
+    color: #F9F9F9;
+  }
+  .header-section nav .logo img {
+    height: 40%;
+  }
+  .header-section nav .nav-active {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  .header-section nav .burger {
+    display: block;
+  }
+}
+
+@media (max-width: 60em) {
+  .header-section {
+    z-index: 1000;
+  }
+  .header-section nav {
     height: 80px;
   }
   .header-section nav .nav-links {
@@ -892,6 +970,347 @@ p {
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+@media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 60em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.5;
+  overflow-x: hidden;
+}
+
+.footer-container {
+  height: 400px;
+  background-image: url("../../../assets/footer-bg.png");
+  background-repeat: no-repeat;
+  background-image: cover;
+  padding: 10% 5% 5% 5%;
+}
+
+@media screen and (min-width: 1441px) {
+  .footer-container {
+    height: 500px;
+    background-image: url("../../../assets/footer-bg-hd.png");
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .footer-container {
+    height: 400px;
+    background-image: url("../../../assets/footer-bg-laptop.png");
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer-container {
+    height: 500px;
+    background-image: none;
+    background-color: #72725D;
+    border-top: 10px solid #F9CA48;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container {
+    height: 600px;
+    background-image: none;
+    background-color: #72725D;
+    border-top: 10px solid #F9CA48;
+  }
+}
+
+.footer-container .footer-body {
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  gap: 2.5% 5%;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 900px) {
+  .footer-container .footer-body {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    gap: 5% 2.5%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    gap: 5% 2.5%;
+  }
+}
+
+.footer-container .footer-body .grid-common {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .grid-common {
+    height: 15vh;
+    text-align: center;
+  }
+}
+
+.footer-container .footer-body .grid-common h5 {
+  color: #F9F9F9;
+  font-size: calc(10px + 1vw);
+  font-weight: 600;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .grid-common h5 {
+    font-size: 16px;
+  }
+}
+
+.footer-container .footer-body .grid-common .link-left {
+  margin-left: 5%;
+}
+
+.footer-container .footer-body .footer-body-left p {
+  color: #F9F9F9;
+  font-size: calc(8px + 0.5vw);
+  padding: 1% 0;
+  width: 90%;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .footer-body-left p {
+    font-size: 14px;
+    width: 100%;
+  }
+}
+
+.footer-container .footer-body .footer-body-left a {
+  text-decoration: none;
+  color: #F9F9F9;
+  font-size: calc(8px + 0.5vw);
+  margin-top: 5%;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .footer-body-left a {
+    font-size: 14px;
+  }
+}
+
+.footer-container .footer-body .footer-body-left a:hover {
+  text-decoration: underline;
+}
+
+.footer-container .footer-body .footer-body-center a {
+  text-decoration: none;
+}
+
+.footer-container .footer-body .footer-body-center a img {
+  height: calc(40px + 1.5vw);
+}
+
+.footer-container .footer-body .footer-body-right .media-icons {
+  font-size: calc(8px + 0.8vw);
+}
+
+.footer-container .footer-body .footer-body-right .media-icons a {
+  text-decoration: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  background-color: #F9F9F9;
+  color: #72725D;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  margin-right: 0.5%;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .footer-body-right .media-icons a {
+    width: 25px;
+    height: 25px;
+    font-size: 14px;
+    margin-right: 1%;
+  }
+}
+
+.footer-container .footer-body .footer-body-right button {
+  padding: 2.5%;
+  font-size: 14px;
+  text-transform: uppercase;
+  outline: none;
+  border: 2px solid #F9F9F9;
+  border-radius: 10px;
+  background-color: #F9F9F9;
+  color: #72725D;
+  font-weight: 600;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.footer-container .footer-body .footer-body-right button:hover {
+  color: #F9F9F9;
+  background-color: inherit;
+}
+
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3.5rem;
+}
+
+h3 {
+  font-size: 2.7rem;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.8rem;
+}
+
+h6 {
+  font-size: 1.3rem;
+}
+
+p {
+  color: #222222;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.container-1 {
+  padding: 10rem;
+}
+
+@media (max-width: 40em) {
+  .container-1 {
+    padding: 5rem;
+  }
+}
+
+.text-center {
+  text-align: center;
+}
+
+.author-title {
+  color: #fff;
+  font-size: calc(8px + 1.5vw);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .author-title {
+    font-size: 14px;
+  }
+}
+
 .about__header {
   background-image: url(/assets/images/gcl-header/banner-about.png);
   background-size: cover;
@@ -920,9 +1339,17 @@ p {
   text-align: center;
 }
 
-.about__header--content .heading {
+.about__header--heading {
+  font-weight: 600;
   font-size: 3.2rem;
-  font-weight: 400;
+  line-height: 3.9rem;
+}
+
+@media (max-width: 40em) {
+  .about__header--heading {
+    font-size: 2rem;
+    line-height: 3.3rem;
+  }
 }
 
 .about__us--heading {
