--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -90,7 +90,10 @@
                     min-height: 250px;
                 }
                 img{
-                    width: 95%;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+
                     position: absolute;
                     bottom: 0;
                     left: 50%;
