--- a/styles/pages/view-services/view-services.css
+++ b/styles/pages/view-services/view-services.css
@@ -135,6 +135,12 @@ html {
   }
 }
 
+@media (max-width: 60em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
@@ -146,6 +152,14 @@ body {
   padding: 1rem 2rem;
   border-radius: .5rem;
   cursor: pointer;
+}
+
+@media (max-width: 35.5em) {
+  .btn {
+    font-size: 1.6rem;
+    padding: .8rem 1.6rem;
+    border-radius: .5rem;
+  }
 }
 
 .btn-primary {
