--- a/styles/pages/news-article/news-article.css
+++ b/styles/pages/news-article/news-article.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -37,125 +38,6 @@ $breakpoint arguments choice:
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  font-weight: 700;
-}
-
-h1 {
-  font-size: 4rem;
-}
-
-h2 {
-  font-size: 3.5rem;
-}
-
-h3 {
-  font-size: 2.7rem;
-}
-
-h4 {
-  font-size: 2rem;
-}
-
-h5 {
-  font-size: 1.8rem;
-}
-
-h6 {
-  font-size: 1.3rem;
-}
-
-p {
-  color: #222222;
-}
-
-.mb-1 {
-  margin-bottom: 1rem;
-}
-
-.mb-2 {
-  margin-bottom: 2rem;
-}
-
-.mb-3 {
-  margin-bottom: 3rem;
-}
-
-.mt-1 {
-  margin-top: 1rem;
-}
-
-.mt-2 {
-  margin-top: 2rem;
-}
-
-.mt-3 {
-  margin-top: 3rem;
-}
-
-.container-1 {
-  padding: 10rem;
-}
-
-@media (max-width: 40em) {
-  .container-1 {
-    padding: 5rem;
-  }
-}
-
-.text-center {
-  text-align: center;
-}
-
-.author-title {
-  color: #fff;
-  font-size: calc(8px + 1.5vw);
-  font-weight: 500;
-}
-
-@media screen and (max-width: 600px) {
-  .author-title {
-    font-size: 14px;
-  }
-}
-
-/*
-0 - 430px;       small-phone
-430 - 568px:     medium-phone
-568 - 600px:     phone
-600 - 1000px:    tablet portrait
-900 - 1300px:    tablet landscape
-[1300 - 1800px] is where normal style apply
-1800px + :       Big desktop
-*/
-/*
-$breakpoint arguments choice:
-- s-phone
-- M-phone
-- phone
-- tab-port
-- tab-land
-- big-desktop
-*/
-/*
-0 - 430px;       small-phone
-430 - 568px:     medium-phone
-568 - 600px:     phone
-600 - 1000px:    tablet portrait
-900 - 1300px:    tablet landscape
-[1300 - 1800px] is where normal style apply
-1800px + :       Big desktop
-*/
-/*
-$breakpoint arguments choice:
-- s-phone
-- M-phone
-- phone
-- tab-port
-- tab-land
-- big-desktop
-*/
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-weight: 700;
@@ -896,6 +778,347 @@ body {
   overflow-x: hidden;
 }
 
+.footer-container {
+  height: 400px;
+  background-image: url("../../../assets/footer-bg.png");
+  background-repeat: no-repeat;
+  background-image: cover;
+  padding: 10% 5% 5% 5%;
+}
+
+@media screen and (min-width: 1441px) {
+  .footer-container {
+    height: 500px;
+    background-image: url("../../../assets/footer-bg-hd.png");
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .footer-container {
+    height: 400px;
+    background-image: url("../../../assets/footer-bg-laptop.png");
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer-container {
+    height: 500px;
+    background-image: none;
+    background-color: #72725D;
+    border-top: 10px solid #F9CA48;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container {
+    height: 600px;
+    background-image: none;
+    background-color: #72725D;
+    border-top: 10px solid #F9CA48;
+  }
+}
+
+.footer-container .footer-body {
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  gap: 2.5% 5%;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 900px) {
+  .footer-container .footer-body {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    gap: 5% 2.5%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    gap: 5% 2.5%;
+  }
+}
+
+.footer-container .footer-body .grid-common {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .grid-common {
+    height: 15vh;
+    text-align: center;
+  }
+}
+
+.footer-container .footer-body .grid-common h5 {
+  color: #F9F9F9;
+  font-size: calc(10px + 1vw);
+  font-weight: 600;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .grid-common h5 {
+    font-size: 16px;
+  }
+}
+
+.footer-container .footer-body .grid-common .link-left {
+  margin-left: 5%;
+}
+
+.footer-container .footer-body .footer-body-left p {
+  color: #F9F9F9;
+  font-size: calc(8px + 0.5vw);
+  padding: 1% 0;
+  width: 90%;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .footer-body-left p {
+    font-size: 14px;
+    width: 100%;
+  }
+}
+
+.footer-container .footer-body .footer-body-left a {
+  text-decoration: none;
+  color: #F9F9F9;
+  font-size: calc(8px + 0.5vw);
+  margin-top: 5%;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .footer-body-left a {
+    font-size: 14px;
+  }
+}
+
+.footer-container .footer-body .footer-body-left a:hover {
+  text-decoration: underline;
+}
+
+.footer-container .footer-body .footer-body-center a {
+  text-decoration: none;
+}
+
+.footer-container .footer-body .footer-body-center a img {
+  height: calc(40px + 1.5vw);
+}
+
+.footer-container .footer-body .footer-body-right .media-icons {
+  font-size: calc(8px + 0.8vw);
+}
+
+.footer-container .footer-body .footer-body-right .media-icons a {
+  text-decoration: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  background-color: #F9F9F9;
+  color: #72725D;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  margin-right: 0.5%;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-container .footer-body .footer-body-right .media-icons a {
+    width: 25px;
+    height: 25px;
+    font-size: 14px;
+    margin-right: 1%;
+  }
+}
+
+.footer-container .footer-body .footer-body-right button {
+  padding: 2.5%;
+  font-size: 14px;
+  text-transform: uppercase;
+  outline: none;
+  border: 2px solid #F9F9F9;
+  border-radius: 10px;
+  background-color: #F9F9F9;
+  color: #72725D;
+  font-weight: 600;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.footer-container .footer-body .footer-body-right button:hover {
+  color: #F9F9F9;
+  background-color: inherit;
+}
+
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3.5rem;
+}
+
+h3 {
+  font-size: 2.7rem;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.8rem;
+}
+
+h6 {
+  font-size: 1.3rem;
+}
+
+p {
+  color: #222222;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.container-1 {
+  padding: 10rem;
+}
+
+@media (max-width: 40em) {
+  .container-1 {
+    padding: 5rem;
+  }
+}
+
+.text-center {
+  text-align: center;
+}
+
+.author-title {
+  color: #fff;
+  font-size: calc(8px + 1.5vw);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .author-title {
+    font-size: 14px;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+@media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 60em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.5;
+  overflow-x: hidden;
+}
+
 .btn {
   font-size: 2rem;
   padding: 1rem 2rem;
@@ -967,6 +1190,125 @@ body {
 .btn-white:hover {
   color: black;
   background-color: #fff;
+}
+
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3.5rem;
+}
+
+h3 {
+  font-size: 2.7rem;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.8rem;
+}
+
+h6 {
+  font-size: 1.3rem;
+}
+
+p {
+  color: #222222;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.container-1 {
+  padding: 10rem;
+}
+
+@media (max-width: 40em) {
+  .container-1 {
+    padding: 5rem;
+  }
+}
+
+.text-center {
+  text-align: center;
+}
+
+.author-title {
+  color: #fff;
+  font-size: calc(8px + 1.5vw);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .author-title {
+    font-size: 14px;
+  }
 }
 
 .news-article {
@@ -1095,20 +1437,22 @@ body {
 }
 
 .news-article__article .btn-container {
-  padding: 2rem 0;
+  padding: 1rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  gap: 1rem;
 }
 
 .news-article__article .btn-container .action-btn {
-  border: none;
   background-color: transparent;
-  cursor: pointer;
+  font-size: 1.6rem;
   padding: 1rem 2rem;
+  text-decoration: none;
+  color: #222222;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1116,6 +1460,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   gap: 1rem;
+}
+
+@media (max-width: 40em) {
+  .news-article__article .btn-container .action-btn {
+    font-size: 1.2rem;
+  }
 }
 
 .news-article__article .btn-container .action-btn:hover {
