--- a/styles/pages/news-article/news-article.scss
+++ b/styles/pages/news-article/news-article.scss
@@ -1,10 +1,12 @@
+@import '../../base/base-style.scss';
+
+@import '../../components/header';
+@import '../../components/footer';
+@import '../../components/button';
+
 @import '../../sass/mixins';
 @import '../../sass/typography';
 @import '../../sass/variables';
-
-@import '../../base/base-style.scss';
-@import '../../components/header';
-@import '../../components/button';
 
 
 
@@ -111,20 +113,25 @@
         }
 
         .btn-container{
-            padding: 2rem 0;
+            padding:1rem 0;
             display: flex;
             justify-content: space-between;
+            gap: 1rem;
 
             .action-btn{
-                border: none;
                 background-color: transparent;
-                cursor: pointer;
+                font-size: 1.6rem;
                 padding: 1rem 2rem;
-
+                text-decoration: none;
+                color: $text-dark;
 
                 display: flex;
                 align-items: center;
                 gap: 1rem;
+
+                @include response(phone){
+                    font-size: 1.2rem;
+                }
 
                 &:hover{
                     color: $primary;
