--- a/styles/pages/social-business/social-business.css
+++ b/styles/pages/social-business/social-business.css
@@ -96,12 +96,12 @@ p {
 }
 
 .container-1 {
-  padding: 10rem;
+  padding: 8rem;
 }
 
 @media (max-width: 40em) {
   .container-1 {
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 
@@ -244,12 +244,12 @@ p {
 }
 
 .container-1 {
-  padding: 10rem;
+  padding: 8rem;
 }
 
 @media (max-width: 40em) {
   .container-1 {
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 
@@ -465,12 +465,12 @@ p {
 }
 
 .container-1 {
-  padding: 10rem;
+  padding: 8rem;
 }
 
 @media (max-width: 40em) {
   .container-1 {
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 
@@ -613,12 +613,12 @@ p {
 }
 
 .container-1 {
-  padding: 10rem;
+  padding: 8rem;
 }
 
 @media (max-width: 40em) {
   .container-1 {
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 
@@ -945,12 +945,12 @@ p {
 }
 
 .container-1 {
-  padding: 10rem;
+  padding: 8rem;
 }
 
 @media (max-width: 40em) {
   .container-1 {
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 
@@ -1268,12 +1268,12 @@ p {
 }
 
 .container-1 {
-  padding: 10rem;
+  padding: 8rem;
 }
 
 @media (max-width: 40em) {
   .container-1 {
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 
@@ -1334,6 +1334,12 @@ $breakpoint arguments choice:
   }
 }
 
+@media (max-width: 60em) {
+  .social-business__header {
+    padding: 0 8%;
+  }
+}
+
 .social-business__header--content {
   color: #F9F9F9;
   text-align: center;
@@ -1364,6 +1370,12 @@ $breakpoint arguments choice:
   font-size: 4.8rem;
   margin-bottom: 3rem;
   text-align: center;
+}
+
+@media (max-width: 40em) {
+  .social-business__social--heading {
+    font-size: 3rem;
+  }
 }
 
 .social-business__social--btn-group {
@@ -1426,6 +1438,13 @@ $breakpoint arguments choice:
 }
 
 @media (max-width: 40em) {
+  .social-business__social--info .info-1 .heading {
+    font-size: 2.5rem;
+    line-height: 3.3rem;
+  }
+}
+
+@media (max-width: 40em) {
   .social-business__social--info .info-1 {
     grid-column: col-start / col-end;
     grid-row: row-start 1 / row-end 1;
@@ -1456,6 +1475,13 @@ $breakpoint arguments choice:
 }
 
 @media (max-width: 40em) {
+  .social-business__social--info .info-2 .heading {
+    font-size: 2.5rem;
+    line-height: 3.3rem;
+  }
+}
+
+@media (max-width: 40em) {
   .social-business__social--info .info-2 {
     grid-column: col-start / col-end;
     grid-row: row-start 3 / row-end 3;
@@ -1483,6 +1509,13 @@ $breakpoint arguments choice:
   font-size: 3.6rem;
   font-weight: 600;
   line-height: 4.3rem;
+}
+
+@media (max-width: 40em) {
+  .social-business__social--info .info-3 .heading {
+    font-size: 2.5rem;
+    line-height: 3.3rem;
+  }
 }
 
 @media (max-width: 40em) {
@@ -1528,23 +1561,48 @@ $breakpoint arguments choice:
   background-color: #F9F9F9;
 }
 
+@media (max-width: 60em) {
+  .social-business__social--info .text-container {
+    padding: 6rem;
+  }
+}
+
 @media (max-width: 40em) {
   .social-business__social--info .text-container {
-    padding: 4rem;
+    padding: 3rem;
   }
 }
 
 .social-business__video {
   height: 70rem;
+  padding: 2rem 0;
+}
+
+@media (max-width: 40em) {
+  .social-business__video {
+    height: 45rem;
+  }
+}
+
+@media (max-width: 26.88em) {
+  .social-business__video {
+    height: 40rem;
+  }
 }
 
 .social-business__goal {
-  padding: 10rem;
+  padding: 8rem;
+}
+
+@media (max-width: 60em) {
+  .social-business__goal {
+    padding: 6rem;
+  }
 }
 
 @media (max-width: 40em) {
   .social-business__goal {
-    padding: 5rem;
+    padding: 3rem;
   }
 }
 
@@ -1553,6 +1611,7 @@ $breakpoint arguments choice:
   display: grid;
   -ms-grid-columns: ([col-start] 1fr [col-end])[2];
       grid-template-columns: repeat(2, [col-start] 1fr [col-end]);
+  grid-gap: 2rem;
 }
 
 @media (max-width: 40em) {
@@ -1603,6 +1662,7 @@ $breakpoint arguments choice:
 }
 
 .social-business__goal--btn-container {
+  padding: 2rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
