about page is complete with responsive

--- a/styles/base/base-style.css
+++ b/styles/base/base-style.css
@@ -123,6 +123,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
