--- a/styles/pages/about/about.css
+++ b/styles/pages/about/about.css
@@ -126,6 +126,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -274,6 +275,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -495,6 +497,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -975,6 +978,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -1334,15 +1338,21 @@ p {
   }
 }
 
+@media (max-width: 60em) {
+  .about__header {
+    padding: 0 8%;
+  }
+}
+
 .about__header--content {
   color: #F9F9F9;
   text-align: center;
 }
 
 .about__header--heading {
+  font-size: 3.5rem;
   font-weight: 600;
-  font-size: 3.2rem;
-  line-height: 3.9rem;
+  line-height: 4.3rem;
 }
 
 @media (max-width: 40em) {
@@ -1353,8 +1363,16 @@ p {
 }
 
 .about__us--heading {
+  font-weight: 600;
+  font-size: 4.8rem;
   margin-bottom: 3rem;
   text-align: center;
+}
+
+@media (max-width: 40em) {
+  .about__us--heading {
+    font-size: 3rem;
+  }
 }
 
 .about__us--btn-group {
@@ -1501,9 +1519,15 @@ p {
   background-color: #F9F9F9;
 }
 
+@media (max-width: 60em) {
+  .about__us--info .text-container {
+    padding: 6rem;
+  }
+}
+
 @media (max-width: 40em) {
   .about__us--info .text-container {
-    padding: 4rem;
+    padding: 3rem;
   }
 }
 
@@ -1517,7 +1541,7 @@ p {
 }
 
 .about__contribution .text {
-  font-size: 1.3rem;
+  font-size: 1.8rem;
 }
 
 .about__contribution .container {
@@ -1530,21 +1554,20 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 .about__contribution .logo-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 1rem;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  gap: 2rem;
 }
 
 .about__contribution .logo-container .logo {
-  height: 7rem;
+  height: 8rem;
 }
 
 .about__team {
@@ -1562,6 +1585,29 @@ p {
   -ms-grid-columns: (minmax(18rem, 1fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   grid-gap: 2rem;
+}
+
+@media (min-width: 112.5em) {
+  .about__team--container {
+    -ms-grid-columns: (minmax(18rem, 1fr))[5];
+        grid-template-columns: repeat(5, minmax(18rem, 1fr));
+    width: 70%;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 60em) {
+  .about__team--container {
+    -ms-grid-columns: (minmax(18rem, 1fr))[3];
+        grid-template-columns: repeat(3, minmax(18rem, 1fr));
+  }
+}
+
+@media (max-width: 40em) {
+  .about__team--container {
+    -ms-grid-columns: (minmax(18rem, 1fr))[2];
+        grid-template-columns: repeat(2, minmax(18rem, 1fr));
+  }
 }
 
 .about__team--container .member {
