--- a/styles/pages/view-services/view-services.scss
+++ b/styles/pages/view-services/view-services.scss
@@ -18,6 +18,7 @@
 
     &__media{
         border-bottom: 1px solid $grey;
+        margin-top: 2rem;
         
         .container{
             padding: 2.4rem 0;
