--- a/styles/base/base-style.scss
+++ b/styles/base/base-style.scss
@@ -8,11 +8,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: 'Montserrat', sans-serif;
 }
 
 html{
     font-size: 62.5%; // 1 rem = 10px
-
+    font-family: 'Montserrat', sans-serif;
     @include response(phone){
         font-size: 50%;
     }
@@ -26,4 +28,3 @@ body{
     line-height: 1.5;
     overflow-x: hidden;
 }
-
