--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -76,6 +76,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -131,6 +137,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -240,6 +247,12 @@ h6 {
 
 p {
   color: #222222;
+}
+
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
 }
 
 .mb-1 {
@@ -862,6 +875,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -994,6 +1013,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -1049,6 +1074,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -1321,6 +1347,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -1575,6 +1607,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -1802,6 +1840,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -1995,6 +2039,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -2050,6 +2100,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -2336,6 +2387,12 @@ p {
   color: #222222;
 }
 
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+
 .mb-1 {
   margin-bottom: 1rem;
 }
@@ -2391,6 +2448,7 @@ p {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -2482,6 +2540,12 @@ h6 {
 
 p {
   color: #222222;
+}
+
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16px;
+  }
 }
 
 .mb-1 {
