--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -27,6 +27,9 @@ h6{
 
 p{
     color: $text-dark;
+    @media screen and (max-width: 600px) {
+        font-size: 16px;
+    }
 }
 
 // margin bottom
