--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -91,13 +91,15 @@
                 }
                 img{
                     width: 100%;
-                    height: 100%;
-                    object-fit: contain;
-
                     position: absolute;
                     bottom: 0;
                     left: 50%;
                     transform: translateX(-50%);
+                    @media screen and (max-width: 600px) {
+                        min-height: 250px;
+                        height: 100%;
+                        object-fit: contain;
+                    }
                 }
             }
             .person-quote{
